--- a/templates/update_post_form.html
+++ b/templates/update_post_form.html
@@ -1,7 +1,7 @@
 {% extends "layout/base.html" %}
 {% block title %}Editing: {{ post.get('title') }}{% endblock %}
 {% block content %}
-<form class="post" action="{{ url_for('create_post') }}", method="post" enctype="multipart/form-data">
+<form class="post" action="{{ url_for('update_post', post_id=post.id) }}", method="post" enctype="multipart/form-data">
     <input class="post-title" type="text" name="title" placeholder="Post Title" value="{{ post.get('title') }}">
     <div class="uploader-container">
         {% if not post.get('featured_image') %}
