feat: use after update hook to add updated flag

--- a/templates/post.html
+++ b/templates/post.html
@@ -28,7 +28,7 @@
     </div>
     <footer>
         <p>
-            Updated At {{ post.get('updatedAt').strftime('%Y-%m-%d %H:%M:%S') }}
+            {% if post.get('is_updated') %}Updated At {{ post.get('updatedAt').strftime('%Y-%m-%d %H:%M:%S') }}{% endif %}
         </p>
     </footer>
 </article>
