:bug: map tags to post afte update

--- a/templates/update_post_form.html
+++ b/templates/update_post_form.html
@@ -3,6 +3,7 @@
 {% block content %}
 <form class="post" action="{{ url_for('update_post', post_id=post.id) }}", method="post" enctype="multipart/form-data">
     <input class="post-title" type="text" name="title" placeholder="Post Title" value="{{ post.get('title') }}">
+    <input class="post-tag-names" type="text", name="tags" placeholder="Tags" value="{{ tag_names }}">
     <div class="uploader-container">
         {% if not post.get('featured_image') %}
         <p class="uploader-placeholder">
