:lock: Use flask#Markup to mark up post content.

--- a/templates/post.html
+++ b/templates/post.html
@@ -24,7 +24,7 @@
     </header>
     {% endif %}
 	<div class="post-content">
-        {{ post.get('marked_content')|safe }}
+        {{ post.get('marked_content') }}
     </div>
     <footer>
     {% if post.get('is_updated') %}
