--- a/cuneiform/templates/user_login.html
+++ b/cuneiform/templates/user_login.html
@@ -5,7 +5,7 @@
     <h1>Login</h1>
     <p>Login to manage posts. Add a user in <a href="https://leancloud.cn/dashboard/">LeanCloud dashboard</a>.</p>
 </header>
-    <form action="{{ url_for('login') }}" method="post">
+    <form action="{{ url_for('admin.login') }}" method="post">
         <input type="text" name="username" placeholder="Username">
         <input type="password" name="password" placeholder="Password">
         <input type="submit" value="Login">
